integrations/wasm/rust/crates/angular-ts/tests/ui/component_requires_template.rs
use angular_ts::component;

#[component(selector = "bad-component")]
pub struct BadComponent;

fn main() {}
